syntax = "proto3";

option go_package = "/register";

message RegData {
    string login = 1;
    string password = 2;
}
message Response {
    bool ok = 1;
}
message ChangeData{
    string login = 1;
    string old_pass =2;
    string new_pass =3;
}
service Register {
    rpc Register (RegData) returns (Response){}
    rpc ChangePass (ChangeData) returns (Response);
}